// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dom-rendering event activeContract-txAwaitingApproval should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txAwaitingApproval bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>You have a previous transaction waiting for you to confirm</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txAwaitingApproval should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txAwaitingApproval bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txAwaitingApproval custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmReminder should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txConfirmReminder bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Please confirm your transaction to continue (hint: the transaction window may be behind your browser)</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmReminder should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txConfirmReminder bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmReminder custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmed should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has succeeded</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmed should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmed custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmedClient should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmedClient bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has succeeded</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txConfirmedClient should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmedClient bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmedClient custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txFailed should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txFailed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has failed</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txFailed should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txFailed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txFailed custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txPending should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txPending bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has started</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txPending should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txPending bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txPending custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txRequest should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txRequest bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction is waiting for you to confirm</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txRequest should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txRequest bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txRequest custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txSendFail should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txSendFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>You rejected the transaction</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txSendFail should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txSendFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txSendFail custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txSent should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txSent bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction has been sent to the network</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txSent should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txSent bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txSent custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txStall should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txStall bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has stalled</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeContract-txStall should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txStall bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txStall custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activePreflight-nsfFail should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-nsfFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>You have insufficient funds to complete this transaction</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activePreflight-nsfFail should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-nsfFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>nsfFail custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activePreflight-txRepeat should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txRepeat bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>This could be a repeat transaction</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activePreflight-txRepeat should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txRepeat bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txRepeat custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txAwaitingApproval should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txAwaitingApproval bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>You have a previous transaction waiting for you to confirm</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txAwaitingApproval should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txAwaitingApproval bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txAwaitingApproval custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmReminder should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txConfirmReminder bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Please confirm your transaction to continue (hint: the transaction window may be behind your browser)</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmReminder should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txConfirmReminder bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmReminder custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmed should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has succeeded</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmed should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmed custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmedClient should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmedClient bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has succeeded</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txConfirmedClient should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-complete bn-txConfirmedClient bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txConfirmedClient custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txFailed should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txFailed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has failed</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txFailed should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txFailed bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txFailed custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txPending should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txPending bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has started</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txPending should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txPending bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txPending custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txRequest should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txRequest bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction is waiting for you to confirm</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txRequest should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txRequest bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txRequest custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txSendFail should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txSendFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>You rejected the transaction</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txSendFail should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txSendFail bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txSendFail custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txSent should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txSent bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction has been sent to the network</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txSent should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txSent bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txSent custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txStall should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txStall bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has stalled</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event activeTransaction-txStall should trigger correct DOM render [Custom state 1] 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-failed bn-txStall bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      
		</span>
		<div class=\\"bn-notification-info\\">
			<p>txStall custom msg</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`dom-rendering event initialize-mobileBlocked should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"bn-onboard-modal-shade\\">
    <div id=\\"bn-mobile-not-supported\\" class=\\"bn-onboard\\">
      <div class=\\"bn-onboard-modal bn-onboard-alert\\">
        <a href=\\"#\\" class=\\"bn-onboard-close\\">
          <span class=\\"bn-onboard-close-x\\"></span>
        </a>
        
	  <img src=\\"[object Object]\\" alt=\\"MobileNot Supported\\" srcset=\\"[object Object] 2x\\">
  
        <br><br>
        <h1 class=\\"h4\\">Mobile Not Supported</h1>
        <p>Our distributed application does not support mobile browsers. Please visit our site on a desktop browser. Thank you!</p>
        <br>
        
        
    <div class=\\"bn-onboarding-branding\\">
      <p>Powered by
      <a href=\\"https://www.blocknative.com/\\" target=\\"_blank\\">
      <img src=\\"[object Object]\\" alt=\\"Blocknative\\" srcset=\\"[object Object] 2x\\">
      </a>
      </p>
    </div>
  
      </div>
    </div>
  </div>"
`;

exports[`dom-rendering event onboard-browserFail should trigger correct DOM render [Custom state 0] 1`] = `
"
    
  <div class=\\"bn-onboard-modal-shade\\">
    <div id=\\"bn-browser-not-supported\\" class=\\"bn-onboard\\">
      <div class=\\"bn-onboard-modal bn-onboard-alert\\">
        <a href=\\"#\\" class=\\"bn-onboard-close\\">
          <span class=\\"bn-onboard-close-x\\"></span>
        </a>
        
	  <img src=\\"[object Object]\\" alt=\\"BrowserNot Supported\\" srcset=\\"[object Object] 2x\\">
  
        <br><br>
        <h1 class=\\"h4\\">This Browser is Not Supported</h1>
        <p>This Dapp is not supported in Chrome. Please visit us in one of the following browsers. Thank You!</p>
        <br>
        
    <p>
      <a href=\\"https://www.google.com/chrome/\\" target=\\"_blank\\" class=\\"bn-btn bn-btn-primary bn-btn-outline text-center\\">
      <img src=\\"[object Object]\\" alt=\\"Chrome Logo\\" srcset=\\"[object Object] 2x\\">
      <br>
      Chrome
      </a>
      <a href=\\"https://www.mozilla.org/en-US/firefox/\\" target=\\"_blank\\" class=\\"bn-btn bn-btn-primary bn-btn-outline text-center\\">
      <img src=\\"[object Object]\\" alt=\\"Firefox Logo\\" srcset=\\"[object Object] 2x\\">
      <br>
      Firefox
      </a>
    </p>
  <br>
        
    <div class=\\"bn-onboarding-branding\\">
      <p>Powered by
      <a href=\\"https://www.blocknative.com/\\" target=\\"_blank\\">
      <img src=\\"[object Object]\\" alt=\\"Blocknative\\" srcset=\\"[object Object] 2x\\">
      </a>
      </p>
    </div>
  
      </div>
    </div>
  </div>"
`;

exports[`dom-rendering event onboard-welcomeUser should trigger correct DOM render [Storage: _assist_newUser='true'] [Custom state 0] 1`] = `
"
    
  <div class=\\"bn-onboard-modal-shade\\">
    <div id=\\"bn-user-basic\\" class=\\"bn-onboard\\">
      <div class=\\"bn-onboard-modal bn-onboard-basic clearfix\\">
        <a href=\\"#\\" class=\\"bn-onboard-close\\">
          <span class=\\"bn-onboard-close-x\\"></span>
        </a>
        
    <div class=\\"bn-onboard-sidebar\\">
      <h4>Setup Tasks</h4>
      <ul class=\\"bn-onboard-list\\">
        <li class=\\"bn-inactive\\">
          <span class=\\"bn-onboard-list-sprite\\"></span> Install MetaMask
        </li>
        <li class=\\"bn-inactive\\">
          <span class=\\"bn-onboard-list-sprite\\"></span> MetaMask Login
        </li>
        <li class=\\"bn-inactive\\">
          <span class=\\"bn-onboard-list-sprite\\"></span> MetaMask Connect
        </li>
        <li class=\\"bn-inactive\\">
          <span class=\\"bn-onboard-list-sprite\\"></span> Join the Correct Network
        </li>
        <li class=\\"bn-inactive\\">
          <span class=\\"bn-onboard-list-sprite\\"></span> Get Some Ether
        </li>
      </ul>
      
    <div class=\\"bn-onboarding-branding\\">
      <p>Powered by
      <a href=\\"https://www.blocknative.com/\\" target=\\"_blank\\">
      <img src=\\"[object Object]\\" alt=\\"Blocknative\\" srcset=\\"[object Object] 2x\\">
      </a>
      </p>
    </div>
  
    </div>
  
				
	  <div class=\\"bn-onboard-main\\">
	    
    <img src=\\"[object Object]\\" class=\\"bn-onboard-img\\" alt=\\"Blocknative\\" srcset=\\"[object Object] 2x\\">
    <br>
    <h1 class=\\"h4\\">Let’s Get You Started</h1>
    <p>To use this feature you’ll need to be set up and ready to use the blockchain. This onboarding guide will walk you through each step of the process. It won’t take long and at any time you can come back and pick up where you left off.</p>
    <br>
    <br>
    <p class=\\"bn-onboard-button-section\\">
      <a href=\\"#\\" class=\\"bn-btn bn-btn-primary bn-btn-outline\\">I’M READY
      </a>
    </p>
  
	  </div>
	
        
      </div>
    </div>
  </div>"
`;
